# stm32l4-app-c

./: README.md  fossil-file.py  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_pipline.yaml  ci_support.yaml  meson_ci.yml
code/: app.c  app.h  main.c  meson.build  startup_stm32l475vgtx.s  syscalls.c  system.c
data/: STM32L475VGTX_FLASH.ld  data.txt  meson.build  stm32l475.cross
subprojects/: fscl-xcore-c.wrap  fscl-xstring.wrap  fscl-xtest-c.wrap  fscl-xtool-c.wrap
test/: meson.build  xtest_cases.c  xunit_runner.c
