project('Fossil Firmware', 'c',
    meson_version: '>=1.2.0',
    version: '0.1.0',
    default_options: ['c_std=c2x', 'werror=true', 'buildtype=minsize'])

# uncomment later on to test STM wrap packages by Fossil Logic
# deps = [
#     dependency('fscl-stm32l4xx-hal-c'),
#     dependency('fscl-stm32l4xx-ll-c')
# ]

subdir('code')
